# cookie-refresher

./: .env.example  .env.test  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  RECORD&REPLAY.md  TESTING.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  pytest.ini  skills.md
data/: action_script.json  programmed_steps.json
jaeger/: config.yaml
src/cookie_refresher/adapters/: action_script_store.py  job_store.py  programmed_script_store.py
src/cookie_refresher/adapters/controllers/: api.py
src/cookie_refresher/adapters/gateways/: vnc_browser.py  vtrack_http.py
src/cookie_refresher/application/use_cases/: no_agent_steps.py  refresh_session.py  replay_session.py
src/cookie_refresher/domain/: entities.py  ports.py
src/cookie_refresher/infrastructure/: anthropic_client.py  main.py  scheduler.py  settings.py  telemetry.py
tests/: conftest.py
tests/integration/: test_agent_login_flow.py
tests/unit/adapters/: test_action_script_store.py  test_job_store.py  test_programmed_script_store.py  test_vnc_browser_get_cookies.py  test_vnc_browser_screenshots.py
tests/unit/application/: test_api_controller.py  test_no_agent_steps.py  test_react_decisions.py  test_refresh_session.py  test_refresh_session_recording.py  test_replay_session.py
tests/unit/domain/: test_entities.py  test_ports.py
tests/unit/infrastructure/: test_anthropic_client.py
vnc-browser/: Dockerfile  main.py
